syntax = "proto3";

message ServerMessage {
    oneof server_message {
        PushNotification push_notification = 1;    
    }
}

message PushNotification {
    string id = 1; // uuid format
    string created_at = 2; // rfc 3339 format
    string title = 3;
    string body = 4;
}

message ClientMessage {
    oneof client_message {
        DeliveryAck delivery_ack = 1;
    }
}

message DeliveryAck {
    enum Status {
        STATUS_ACK = 0;
        STATUS_NACK = 1;
    }

    string push_id = 1;
    Status status = 2;
}